Updated Hedge Fund Risk Report module.

--- a/nicnbk-ui-angular2/src/app/lookup/view/lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/lookup.values.component.html
@@ -24,6 +24,13 @@
                         <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
                     </td>
                 </tr>
+                <tr>
+                    <td>Portfolio VaR</td>
+                    <td>
+                        <button class="btn btn-sm btn-primary" [routerLink]="['/lookups/portfolioVars']">Edit</button>
+                        <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
