Updated Hedge Fund Risk Report module, fixed performance summary to display both class A and class B.

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
@@ -61,10 +61,10 @@
                             <!--                                <span data-toggle="tooltip">{{performance.portfolioValue | percent : '1.2'}}</span>-->
                         </td>
                         <td>{{performance.benchmarkValueTxt}}</td>
-                        <td>{{performance.portfolioValueTxt}}
+                        <td>{{performance.portfolioBValueTxt}}
                             <!--                                <span data-toggle="tooltip">{{performance.portfolioValue | percent : '1.2'}}</span>-->
                         </td>
-                        <td>{{performance.benchmarkValueTxt}}</td>
+                        <td>{{performance.benchmarkAwcValueTxt}}</td>
                     </tr>
                     </tbody>
                 </table>
@@ -86,9 +86,9 @@
                         <td>{{performance.portfolioValueTxt}}
                         </td>
                         <td>{{performance.benchmarkValueTxt}}</td>
-                        <td>{{performance.portfolioValueTxt}}
+                        <td>{{performance.portfolioBValueTxt}}
                         </td>
-                        <td>{{performance.benchmarkValueTxt}}</td>
+                        <td>{{performance.benchmarkAwcValueTxt}}</td>
                     </tr>
                     </tbody>
                 </table>
