ICMeetings bugfix: missing end of comment

--- a/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/generated.reports.nb.reporting.component.html
@@ -32,6 +32,8 @@
     </div>
     <br/>
 
+    <h3>{{periodicReport.reportDate != null ? getReportDateShortFormatted(periodicReport.reportDate): ''}}</h3>
+
     <ul class="nav nav-tabs">
         <li [ngClass]="getReportsTabClass()">
         <!--<li class="active">-->
