--- a/nicnbk-ui-angular2/src/app/reporting/view/input.file.upload.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/input.file.upload.nb.reporting.component.html
@@ -733,25 +733,37 @@
                             <td>Previous Fund Name</td>
                             <td>&nbsp;</td>
                         </tr>
-                        <tr *ngFor="let pe of fundRenamesPE">
-                            <td width="50%">
-                                <select required class="form-control" style="width: 100%" [(ngModel)]="pe.currentFundName"
-                                        [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.currentPEFundNameList, pe.currentFundName)">
-                                    <option *ngFor="let item of fundNameListHolder.currentPEFundNameList" [value]="item">{{item}}</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select required class="form-control" style="width: 100%" [(ngModel)]="pe.previousFundName"
-                                        [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.previousPEFundNameList, pe.previousFundName)">
-                                    <option *ngFor="let item of fundNameListHolder.previousPEFundNameList" [value]="item">{{item}}</option>
-                                </select>
-                            </td>
-                            <td>
-                                <button class="btn btn-xs btn-danger" (click)="deleteFundRename(fundRenamesPE, pe)">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </td>
-                        </tr>
+                        <ng-container *ngFor="let pe of fundRenamesPE; let i = index">
+                            <tr>
+                                <td>
+                                    <select required class="form-control" style="width: 100%" [(ngModel)]="pe.currentFundName"
+                                            [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.currentPEFundNameList, pe.currentFundName)">
+                                        <option *ngFor="let item of fundNameListHolder.currentPEFundNameList" [value]="item">{{item}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <select required class="form-control" style="width: 100%" [(ngModel)]="pe.previousFundName"
+                                            [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.previousPEFundNameList, pe.previousFundName)">
+                                        <option *ngFor="let item of fundNameListHolder.previousPEFundNameList" [value]="item">{{item}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <button class="btn btn-xs btn-danger" (click)="deleteFundRename(fundRenamesPE, pe)">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="checkbox pull-right">
+                                        <input type="checkbox" [checked]="pe.usePreviousFundName" [attr.id]="'checkbox_pe_' + i">
+                                        use previous fund name
+                                    </label>
+                                </td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                        </ng-container>
                         <tr>
                             <td colspan="2" style="font-weight: bold">HEDGE FUNDS</td>
                             <td>
@@ -763,25 +775,37 @@
                             <td>Previous Fund Name</td>
                             <td>&nbsp;</td>
                         </tr>
-                        <tr *ngFor="let hf of fundRenamesHF">
-                            <td>
-                                <select required class="form-control" style="width: 100%" [(ngModel)]="hf.currentFundName"
-                                        [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.currentHFFundNameList, hf.currentFundName)">
-                                    <option *ngFor="let item of fundNameListHolder.currentHFFundNameList" [value]="item">{{item}}</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select required class="form-control" style="width: 100%" [(ngModel)]="hf.previousFundName"
-                                        [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.previousHFFundNameList, hf.previousFundName)">
-                                    <option *ngFor="let item of fundNameListHolder.previousHFFundNameList" [value]="item">{{item}}</option>
-                                </select>
-                            </td>
-                            <td>
-                                <button class="btn btn-xs btn-danger" (click)="deleteFundRename(fundRenamesHF, hf)">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </td>
-                        </tr>
+                        <ng-container *ngFor="let hf of fundRenamesHF; let i = index">
+                            <tr>
+                                <td>
+                                    <select required class="form-control" style="width: 100%" [(ngModel)]="hf.currentFundName"
+                                            [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.currentHFFundNameList, hf.currentFundName)">
+                                        <option *ngFor="let item of fundNameListHolder.currentHFFundNameList" [value]="item">{{item}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <select required class="form-control" style="width: 100%" [(ngModel)]="hf.previousFundName"
+                                            [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.previousHFFundNameList, hf.previousFundName)">
+                                        <option *ngFor="let item of fundNameListHolder.previousHFFundNameList" [value]="item">{{item}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <button class="btn btn-xs btn-danger" (click)="deleteFundRename(fundRenamesHF, hf)">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="checkbox pull-right">
+                                        <input type="checkbox" [checked]="hf.usePreviousFundName" [attr.id]="'checkbox_hf_' + i">
+                                        use previous fund name
+                                    </label>
+                                </td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                        </ng-container>
                         <tr>
                             <td colspan="2" style="font-weight: bold">REAL ESTATE</td>
                             <td>
@@ -793,25 +817,37 @@
                             <td>Previous Fund Name</td>
                             <td>&nbsp;</td>
                         </tr>
-                        <tr *ngFor="let re of fundRenamesRE">
-                            <td>
-                                <select required class="form-control" style="width: 100%" [(ngModel)]="re.currentFundName"
-                                        [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.currentREFundNameList, re.currentFundName)">
-                                    <option *ngFor="let item of fundNameListHolder.currentREFundNameList" [value]="item">{{item}}</option>
-                                </select>
-                            </td>
-                            <td>
-                                <select required class="form-control" style="width: 100%" [(ngModel)]="re.previousFundName"
-                                        [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.previousREFundNameList, re.previousFundName)">
-                                    <option *ngFor="let item of fundNameListHolder.previousREFundNameList" [value]="item">{{item}}</option>
-                                </select>
-                            </td>
-                            <td>
-                                <button class="btn btn-xs btn-danger" (click)="deleteFundRename(fundRenamesRE, re)">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </td>
-                        </tr>
+                        <ng-container *ngFor="let re of fundRenamesRE; let i = index">
+                            <tr>
+                                <td>
+                                    <select required class="form-control" style="width: 100%" [(ngModel)]="re.currentFundName"
+                                            [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.currentREFundNameList, re.currentFundName)">
+                                        <option *ngFor="let item of fundNameListHolder.currentREFundNameList" [value]="item">{{item}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <select required class="form-control" style="width: 100%" [(ngModel)]="re.previousFundName"
+                                            [ngModelOptions]="{standalone: true}" (ngModelChange)="fundNameSelected(fundNameListHolder.previousREFundNameList, re.previousFundName)">
+                                        <option *ngFor="let item of fundNameListHolder.previousREFundNameList" [value]="item">{{item}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <button class="btn btn-xs btn-danger" (click)="deleteFundRename(fundRenamesRE, re)">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label class="checkbox pull-right">
+                                        <input type="checkbox" [checked]="re.usePreviousFundName" [attr.id]="'checkbox_re_' + i">
+                                        use previous fund name
+                                    </label>
+                                </td>
+                                <td>&nbsp;</td>
+                                <td>&nbsp;</td>
+                            </tr>
+                        </ng-container>
                     </table>
                 </div>
                 <div class="modal-footer">
