Updated Hedge Fund Risk Report module, upload allocation by sub-strategy, stress-tests. Todo upload/update top fund allocations.

--- a/nicnbk-ui-angular2/src/app/lookup/view/lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/lookup.values.component.html
@@ -31,6 +31,13 @@
                         <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
                     </td>
                 </tr>
+                <tr>
+                    <td>Stress Tests</td>
+                    <td>
+                        <button class="btn btn-sm btn-primary" [routerLink]="['/lookups/stressTests']">Edit</button>
+                        <!--<a [routerLink]="['/reporting/NBReporting/lookupValues/CurrencyRates]">Edit</a>-->
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
